# mec-system

./: CMakeLists.txt  OPTIMIZATION_PLAN.md  README.md  build.sh
config/: mec.conf  scenario_test.txt
include/: mec_batch.h  mec_common.h  mec_config.h  mec_error.h  mec_fusion.h  mec_lidar.h  mec_logging.h  mec_metrics.h  mec_monitor.h  mec_mqtt.h  mec_object_pool.h  mec_queue.h  mec_radar.h  mec_simd.h  mec_simulator.h  mec_thread.h  mec_v2x.h  mec_video.h  mec_watchdog.h
src/: main.c
src/common/: batch.c  config.c  error.c  logging.c  memory.c  metrics.c  monitor.c  mqtt.c  object_pool.c  queue.c  simd.c  simulator.c  thread.c  track_list.c  v2x_codec.c  watchdog.c
src/fusion/: fusion_processor.c
src/lidar/: lidar_processor.c
src/radar/: radar_processor.c
src/video/: video_processor.cpp  video_processor_mock.c
tests/: test_integration.c  test_track_list.c  unity_config.c
